# fearless_simd

./: .clippy.toml  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  check_targets.sh
.github/: copyright.sh
.github/workflows/: ci.yml
fearless_simd/: Cargo.toml  README.md
fearless_simd/examples/: disable_avx2_for_one_function.rs  play.rs  sigmoid.rs  srgb.rs  unpremul.rs
fearless_simd/src/: generated.rs  half_assed.rs  impl_macros.rs  kernel_macros.rs  lib.rs  macros.rs  support.rs  traits.rs  transmute.rs
fearless_simd/src/core_arch/: fallback.rs  mod.rs
fearless_simd/src/core_arch/aarch64/: mod.rs  neon.rs
fearless_simd/src/core_arch/wasm32/: mod.rs  simd128.rs
fearless_simd/src/core_arch/x86/: avx.rs  avx2.rs  avx512.rs  fma.rs  mod.rs  sse.rs  sse2.rs  sse3.rs  sse4_1.rs  sse4_2.rs  ssse3.rs
fearless_simd/src/core_arch/x86_64/: sse2.rs
fearless_simd_core/: Cargo.toml  README.md
fearless_simd_core/src/: lib.rs  support.rs  trampoline.rs
fearless_simd_core/src/x86/: mod.rs
fearless_simd_core/src/x86/adx/: adx.rs  mod.rs
fearless_simd_core/src/x86/avx/: avx.rs  avx2.rs  avxifma.rs  avxneconvert.rs  avxvnni.rs  avxvnniint16.rs  avxvnniint8.rs  mod.rs
fearless_simd_core/src/x86/avx512/: avx512bf16.rs  avx512bitalg.rs  avx512bw.rs  avx512cd.rs  avx512dq.rs  avx512f.rs  avx512fp16.rs  avx512ifma.rs  avx512vbmi.rs  avx512vbmi2.rs  avx512vl.rs  avx512vnni.rs  avx512vp2intersect.rs  avx512vpopcntdq.rs  mod.rs
fearless_simd_core/src/x86/crypto/: aes.rs  gfni.rs  kl.rs  mod.rs  pclmulqdq.rs  rdrand.rs  rdseed.rs  sha.rs  sha512.rs  sm3.rs  sm4.rs  vaes.rs  vpclmulqdq.rs  widekl.rs
fearless_simd_core/src/x86/discontinued/: mod.rs  tbm.rs
fearless_simd_core/src/x86/sse/: fxsr.rs  mod.rs  sse.rs  sse2.rs  sse3.rs  sse4_1.rs  sse4_2.rs  sse4a.rs  ssse3.rs
fearless_simd_core/src/x86/v1/: fxsr.rs  level.rs  mod.rs  sse.rs
fearless_simd_core/src/x86/v2/: cmpxchg16b.rs  level.rs  mod.rs  popcnt.rs
fearless_simd_core/src/x86/v3/: bmi1.rs  bmi2.rs  f16c.rs  fma.rs  level.rs  lzcnt.rs  mod.rs  movbe.rs
fearless_simd_core/src/x86/v4/: level.rs  mod.rs
fearless_simd_core/src/x86/xsave/: mod.rs  xsave.rs  xsavec.rs  xsaveopt.rs  xsaves.rs
fearless_simd_dev_macros/src/: lib.rs
fearless_simd_gen/: Cargo.toml
fearless_simd_gen/src/: generic.rs  level.rs  main.rs  mk_avx2.rs  mk_core_arch.rs  mk_fallback.rs  mk_kernel_macros.rs  mk_neon.rs  mk_ops.rs  mk_scalar.rs  mk_simd_trait.rs  mk_simd_types.rs  mk_sse4_2.rs  mk_wasm.rs  mk_x86.rs  ops.rs  parse_stdarch.rs  types.rs  util.rs  x86_common.rs
fearless_simd_gen/src/arch/: avx2.rs  fallback.rs  mod.rs  neon.rs  sse4_2.rs  wasm.rs  x86.rs  x86_common.rs
fearless_simd_tests/: Cargo.toml  README.md
fearless_simd_tests/tests/: harness.rs  mask_methods.rs  mod.rs  new.rs  soundness.rs  wasm.rs
fearless_simd_tests/tests/harness/: extended_tests.rs  extended_tests_256.rs  extended_tests_512.rs  int64.rs  lm_generated.rs  mod.rs  slide_exhaustive.rs
fearless_simd_tests/tests/harness/lm_generated/: extended_512.rs  mask_methods.rs  mask_roundtrip.rs  mask_roundtrip_x86.rs  mod_256.rs  mod_512.rs  swizzle_dyn_precise.rs
fearless_simd_tests/tests/harness/ops/: abs.rs  add.rs  all_false.rs  all_true.rs  and.rs  any_false.rs  any_true.rs  approximate_recip.rs  as_array.rs  as_array_mut.rs  as_array_ref.rs  bitcast.rs  block_splat.rs  ceil.rs  combine.rs  copysign.rs  cvt_f32.rs  cvt_i32.rs  cvt_i32_precise.rs  cvt_u32.rs  cvt_u32_precise.rs  deinterleave.rs  div.rs  floor.rs  fract.rs  from_bitmask.rs  from_bytes.rs  from_fn.rs  from_slice.rs  index.rs  interleave.rs  load_array.rs  load_array_ref.rs  load_interleaved_128.rs  max.rs  max_precise.rs  min.rs  min_precise.rs  mod.rs  mul.rs  (+49 more)
