[package]
name = "fearless_simd"
version = "0.2.0"
license.workspace = true
edition.workspace = true
repository.workspace = true
authors = ["Raph Levien <raph.levien@gmail.com>"]
keywords = ["simd"]
categories = ["hardware-support"]
description = "Safer and easier SIMD"
readme = "README.md"
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = true
# TODO: Get the right set of targets here. x86 linux, x86-64 linux, arm-macos, wasm
# default-target = "x86_64-unknown-linux-gnu"
# targets = []


[features]
safe_wrappers = []
default = ["std"]
std = []
libm = ["dep:libm"]

[lints]
workspace = true

[dependencies]
bytemuck = "1.23.0"
libm = { version = "0.2.15", optional = true }
half = { version = "2.4.1", optional = true }
