[package]
name = "fearless_simd"
version = "0.5.0"
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
authors = ["Raph Levien <raph.levien@gmail.com>"]
keywords = ["simd"]
categories = ["hardware-support"]
description = "Safer and easier SIMD"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
targets = [
  "x86_64-unknown-linux-gnu",
  "i686-unknown-linux-gnu",
  "aarch64-apple-darwin",
  "wasm32-unknown-unknown",
]
rustdoc-args = [
  "--cfg",
  'target_feature="simd128"',
] # otherwise WASM docs only show the fallback level


[features]
default = ["std", "sse4_2", "avx2"]
# Get floating point functions from the standard library (likely using your targets libc).
# Also allows using `Level::new` on all platforms, to detect which target features are enabled
std = []
# Use floating point implementations from libm
libm = ["dep:libm"]

# Enable the SSE4.2/x86-64-v2 runtime SIMD level on x86 and x86_64.
sse4_2 = []
# Enable the AVX2/x86-64-v3 runtime SIMD level on x86 and x86_64.
avx2 = []

# Force the "fallback" SIMD level to be supported
# This is primarily used for tests
force_support_fallback = []

[lints]
workspace = true

[[example]]
name = "srgb"
required-features = ["sse4_2"]

[dependencies]
libm = { version = "0.2.15", optional = true }
