[package]
name = "fearless_simd_tests"
license.workspace = true
edition.workspace = true
authors = ["Raph Levien <raph.levien@gmail.com>"]
keywords = ["simd"]
categories = ["hardware-support"]
description = "Safer and easier SIMD"
readme = "README.md"
rust-version.workspace = true
publish = false
# Tests are collected through tests/mod.rs; files beside it are modules, not separate integration crates.
autotests = false

[[test]]
name = "tests"
path = "tests/mod.rs"

[lints]
workspace = true

[features]
default = ["std"]
std = ["fearless_simd/std"]
libm = ["fearless_simd/libm"]

[dependencies]
fearless_simd = { workspace = true }
fearless_simd_dev_macros = { workspace = true }
